<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/emp_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/emp_id" />

    <EditText
        android:id="@+id/emp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/emp_name" />

    <EditText
        android:id="@+id/emp_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPostalAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/emp_address" />

    <EditText
        android:id="@+id/emp_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/emp_salary" />

    <EditText
        android:id="@+id/emp_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/emp_job" />

    <Button
        android:id="@+id/emp_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/emp_submit" />

</LinearLayout>