<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/dept_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/dept_no" />

    <EditText
        android:id="@+id/dept_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/dept_name" />

    <EditText
        android:id="@+id/dept_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/dept_desc" />

    <Button
        android:id="@+id/dept_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dept_submit" />

</LinearLayout>