<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="25dp"
    >

    <TextView
        android:id="@+id/dept_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dept_no"/>

    <TextView
        android:id="@+id/dept_name_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dept_name"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/dept_desc_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dept_desc"
        android:layout_marginTop="10dp"/>




</LinearLayout>